[package]
name = "select-rs"
version = "0.1.0"
authors = ["b23r0 <b23r0@foxmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["select", "async" , "fd_set" , "fd_isset" ,"fd_zero"]
repository = "https://github.com/b23r0/select-rs"
homepage = "https://github.com/b23r0/select-rs"
documentation = "https://github.com/b23r0/select-rs"
description = """
A Select Async IO with Windows&Linux support Rust library.
"""

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.107"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2"] }