[package]
name = "select-rs"
version = "0.1.2"
authors = ["b23r0 <b23r0@foxmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["select", "async" , "fd_set" , "fd_isset" ,"fd_zero"]
repository = "https://github.com/b23r0/select-rs"
homepage = "https://crates.io/crates/select-rs"
documentation = "https://docs.rs/crate/select-rs/0.1.0"
description = """
A POSIX select I/O Multiplexing Rust library.
"""

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.107"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2"] }